--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -18,7 +18,7 @@
 \def \iemail{corrado.sinigaglia@unimi.it}
 %\date{}
 
-\input{$HOME/Documents/submissions/preamble_steve_paper2}
+\input{$HOME/Documents/submissions/preamble_steve_paper3}
 %\author{}
 %\author {S. Butterfill* \& C. Sinigaglia**
 %\\ 
@@ -39,6 +39,10 @@
 \title{}
 
 
+
+
+
+
 \begin{abstract}
 \noindent
 %
@@ -53,7 +57,7 @@ Key words: ***
 \ % blank line
 
 \noindent
-Word count: *
+Word count: ***
 \end{abstract}
 
 \tolerance=5000
@@ -67,13 +71,14 @@ Word count: *
 
 \section{Introduction}
 
-Motor representation sometimes occurs in action observation and facilitates judgements about the goals to which actions are directed (see section \vref{sec:evidence} and \citealp{rizzolatti_functional_2010} for a review). 
+Motor processes sometimes occur in action observation and facilitate judgements about the goals to which actions are directed (see section \vref{sec:evidence} and \citealp{rizzolatti_functional_2010} for a review). 
 Suppose you observe someone's hand moving towards a pair of scissors. 
 You may judge that she will shortly perform an action directed to cutting something up. 
-Making this judgement may depend on representing the other's actions in motor terms \citep{boria:2009_intention, ortigue:2010_understanding}.  
-This is not to say, of course, that you could not make a judgement of this type without representing the action in motor terms, only that making this particular judgement may depend on motor representation. 
+Making this sort of judgement is sometimes facilitated by the occurrence of motor processes \citep{boria:2009_intention, ortigue:2010_understanding}.  
+This is not to say that it would be altogether impossible to make a judgement of this type without the involvement of motor processes. 
+What the evidence shows is rather that judgements about the goals of actions are sometimes faster or more accurate (or both) when motor processes occur in action observation than when they do not.
 How could this work? 
-How could some judgements about the goals of actions ever depend on motor representations?
+How could motor processes sometimes facilitate judgements about the goals to which actions are directed?
 
 Our aim in this paper is to answer this question. 
 The first step is to ask about the contents of motor representations.
@@ -111,7 +116,7 @@ What would count as evidence for this further claim that motor representation ca
 Readers who unfamiliar with point-light stimuli may view examples at http://www.biomotionlab.ca/Demos/BMLwalker.html.
 The technique was introduced by \citet{johansson:1973_visual}.
 }
-They compared performance before and after subjects were trained to perform those actions themselves. They found that subjects' ability to accurately judge which action was being performed improved with the training. This is plausibly a consequence of increased motor expertise rather than any form of perceptual learning because the subjects were blindfolded during training (and the point-light stimuli on which their judgements were based are, of course, entirely visual). A related way to measure the effects of motor representation on judgements is to temporarily lesion part of the motor cortex using repetitive transcranial magnetic stimulation  \citealp{urgesi:2007_representation, moro:2008_neural}.  \citet{urgesi:2007_representation} measured how long subjects took to make judgements about the type of action they were observing. They found that a temporary lesion to the premotor cortex, but not a temporary lesion to another brain area, increased the time taken to make action judgements. And the effect of lesioning the premotor cortex was specific to action judgements: subjects' abilities to make observational judgements identifying body parts was unaffected. Putting these studies together, we have evidence that enhancing motor representation (through training) sometimes facilitates judgements about the goals of actions, while destroying motor representation even temporarily can impair such judgements.
+They compared performance before and after subjects were trained to perform those actions themselves. They found that subjects' ability to accurately judge which action was being performed improved with the training. This is plausibly a consequence of increased motor expertise rather than any form of perceptual learning because the subjects were blindfolded during training (and the point-light stimuli on which their judgements were based are, of course, entirely visual). A related way to measure the effects of motor representation on judgements is to temporarily lesion part of the motor cortex using repetitive transcranial magnetic stimulation  \citep{urgesi:2007_representation, moro:2008_neural}.  \citet{urgesi:2007_representation} measured how long subjects took to make judgements about the type of action they were observing. They found that a temporary lesion to the premotor cortex, but not a temporary lesion to another brain area, increased the time taken to make action judgements. And the effect of lesioning the premotor cortex was specific to action judgements: subjects' abilities to make observational judgements identifying body parts was unaffected. Putting these studies together, we have evidence that enhancing motor representation (through training) sometimes facilitates judgements about the goals of actions, while destroying motor representation even temporarily can impair such judgements.
 
 Further evidence comes from  studies of neurological deficits. If deficits in abilities to perform certain actions specifically impair abilities to make observational judgements about actions of that type, this would also indicate that motor representation can facilitate action judgements.  \citet{serino:2009_lesions_} compared the performances of control and hemiplegic subjects who were asked to identify actions. They found that ability to perform an observed action was correlated with ability to recognise that action. In particular, hemiplegic subjects were less accurate in identifying actions performed with limbs on the hemiplegic side of their bodies than actions performed with limbs on the unaffected side. By contrast, no such pattern was found for control subjects, which included both a group of healthy subjects and also a group of brain-damaged patients with no motor deficit.  (Including the latter group makes it possible to rule out the possibility that the findings were due to a general deficit in higher-order visual processing). Other evidence for a role for motor representation in judgements of action comes from research on apraxia. In one study subjects were asked to identify actions such as cutting paper and drinking with a straw on the basis of the sounds these actions produced. Subjects with limb apraxia showed an impairment in recognising hand-related actions (such as cutting paper) whereas subjects with buccofacial apraxia were impaired in recognising mouth-related actions (such as drinking); but no subjects showed a general impairment in recognising sounds and their significance \citep{pazzaglia:2008_sound_}. These links between motor deficits and action judgements provide further evidence that motor representation sometimes facilitates action judgements.%
 \footnote{
@@ -184,24 +189,47 @@ Planning-like processes in action observation have also been demonstrated by mea
 We can now see how motor processes might ensure that an outcome represented is likely to be an outcome to which the observed action is directed.  As we have seen, there is evidence that observers represent outcomes motorically and that planning-like processes generate expectations about how the actions will unfold given these outcomes.  To take a tiny step further, we conjecture that, in action observation, motor representations of outcomes are weakened to the extent that the expectations they generate are unmet \citep[compare][]{Fogassi:2005nf}. This is how the directedness of action to an outcome can be captured motorically even in the absence of any representation of intention or function.
 
 Let us sum up so far. Our overall question is how motor representations could ever facilitate judgements about the goals of actions.  Our focus until now has been relations between the contents of judgements and the contents of motor representations.  
-In the previous section we argued that motor representations do not all represent merely kinematic features of action; rather, some motor representations represent outcomes to which actions are directed.  
-This led us to ask (in the present section), how the directedness of an action to an outcome might be captured motorically.
-We argued that motor representations probably do not represent the directedness of an action to an outcome, but explained how directedness can be captured by planning-like motor processes which occur in action observation.  Potentially, then, there is a respect in which the content of a motor representation may resemble the content of judgement about the goal to which an action is directed: there may be an outcome which both represent, and both may  capture the directedness of an action to that outcome.  
-We therefore conjecture that where motor representation facilitates a judgement about the goal to which an action is directed,
-there is a motor representation of this outcome, or of a related outcome, and a planning-like motor process which captures the directedness of the action to the outcome.  Motor representations can facilitate judgements about the goals of actions because the goals can be represented motorically and because the directedness of actions to those goals can be captured motorically.
+In the previous section we argued that the contents of some motor representations cannot be fully characterised in terms of merely kinematic features and sensory consequences of action only; rather, some motor representations represent outcomes to which actions are directed.  
+This led us to ask, in the present section, what if anything ensures that outcomes represented motorically in action observation are outcomes to which the observed action is directed.  We argued that motor representations probably do not represent the directedness of an action to an outcome, but explained how directedness can be captured by planning-like motor processes which occur in action observation.  Potentially, then, there is a respect in which the content of a motor representation may resemble the content of judgement about the goal to which an action is directed: there may be an outcome which both represent, and both may  capture the directedness of an action to that outcome.  
+We therefore conjecture that where motor representation facilitates a judgement about the goal to which an action is directed, there is a motor representation of this outcome, or of a related outcome, and a planning-like process which captures the directedness of the action to the outcome.  Motor representations can facilitate judgements about the goals of actions because the goals can be represented motorically and because the directedness of actions to those goals can be captured motorically.
 
-This conjecture---that motor representation not only facilitates judgements but also does so partly by virtue of the contents of motor representations matching those of judgements---is surprising to the extent that it is natural to suppose that motor representation is isolated from judgement.  While the evidence all but forces us to accept the conjecture, this conjecture, far from answering our overall question, only serves to make more mysterious the facilitatory effect of motor representations on judgements about the goals of actions. How could motor representations have content-respecting influences on judgements?%
+This conjecture, however, far from fully answering our overall question, throws up a further challenge.  For the conjecture, that motor representation facilitates judgements partly by virtue of the contents of motor representations matching those of judgements, implies that there are content-respecting influences of motor representation on judgement.  The existence of such content-respecting influences is surprising given that motor representations are to a significant degree isolated from judgements. True, the evidence all but forces us to accept that such influences occur.  But that leaves us with the question of how such influences are possible. How could motor representations sometimes have content-respecting influences on judgements?  What might connect some privileged motor representations to judgements about goals in action observation?%
 \footnote{
-It may be tempting to make a radical move by supposing that there are direct inferential relations between motor representation and thought.  However there are good arguments for denying that motor representations are inferentially integrated with the thoughts involved in explicit judgements about the goals of observed actions \citep{butterfill:2012_intention}.
-}
+At this point it may be tempting to make a radical move by supposing that there are direct inferential relations between motor representation and thought.  But the evidence we have reviewed does not support this radical move, and there are compelling arguments for denying that motor representations are inferentially integrated with the thoughts involved in explicit judgements about the goals of observed actions (see e.g.\ \citealp{butterfill:2012_intention}).
+ Note also that someone who made this radical move would have to explain why motor representation and judgement appear to be inferentially isolated in many other cases.}
+
+
+
+
+DUSSELDORF ARGUMENT (rough, from Friday skype):
+(1) Motor imagery involves experience of action as such (e.g. of grasping as such) and not just of sensory consequences of actions
+(one relevant consideration is that you know not only which action you are imagining but when you have succeeded in imagining performing it);
+(corollary: there can be experiences of action without experiences of acting)
+(2) There are common elements between what you  experience when you imagine acting and what sometimes you experience when you observe an action; in particular, the experience of action is common to both
+Therefore
+(3) Sometimes observing action involves experiencing action as such
 
 
 
 \section{Experience of Action}
 \label{sec:processes}
-Now to say that two varieties of representations---motor representations and judgements---sometimes have nonaccidentally matching contents is not yet to explain how that match might come about.  Which processes could be responsible for the match?  When judgements about the goals of observed actions depend on the observers' motor representations, which processes connect motor representations to judgements?  
+Our aim in this section is to explain how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions.  Broadly, our proposal will be that the influence of motor representations on judgement is like that of visual representations.  Some some visual representations have content-respecting influences on judgement because they give rise to visual experiences of the objects and features represented. Similarly, some motor representations have content-respecting influences on judgement because they give rise to motor experiences of actions.  Or so we shall argue.
 
-In broad terms, our will be proposal is that the dependence of observational judgements on motor representations goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about these actions.  However this is consistent with two quite different hypotheses concerning the experiences associated with observing action.
+TBE: content-respecting influences of (MR of G$_1$) onto (Jud about G$_2$) where G$_1$ matches G$_2$
+
+Explanation-1: MR of G captures directedness of action a -> experiences of action a as directed to G -> judgement that action is directed to goal G
+	Key component: Dusseldorf argument, imagination
+
+Explanation-2: MR of G captures directedness of action a -> experiences revelatory of action but experiences as of sensory consequences of actions -> association between experienced sensory consequences and action directed to goal G (how? for example, I know the sound of a newspaper being opened) -> judgement that action a is directed to goal G
+
+E.g. clapping:
+	representation of sound
+	representation of action
+	association: characteristic sounds<>action
+	Thanks to the association, experience of the sounds can result in a representation of the action
+
+
+Broadly, our will be proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about these actions.  However this is consistent with two quite different hypotheses concerning the experiences associated with observing action.
 
 One hypothesis is that in observing action we experience not only movements and sounds but also goal-directed actions as such: it is this experience which enables judgements of action, and motor impairments affect judgements of action by preventing one from experiencing actions as such. On the other hypothesis, in observing actions presented as point-light stimuli or acoustically we experience movements and sounds only. Motor representations somehow make these particular experiences of movements and sounds possible, and these experiences in turn ground judgements about actions.  On both hypotheses motor representations enable experiences which are revelatory of action in the sense that they can provide reasons for correct judgements about which action someone is performing.  The difference concerns what these revelatory experiences are experiences of: whether some are experiences of goal-directed actions as such (the first hypothesis) or whether all are experiences of movements and sounds only (the second hypothesis).  
 
@@ -302,5 +330,13 @@ MR<----> Action Judgment (action concept) <----> B \& D Judgment (b\&d concept)
 
 
 
+
+
+
+\bibliography{$HOME/endnote/phd_biblio}
+
+
+
+\end{document}
 
 
