--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -82,9 +82,26 @@ In \citet{Bratman:1992mi}, the following were offered as jointly sufficient \tex
 `3. 1 and 2 are common knowledge between us' \citep[][p.\ View 4]{Bratman:1993je}
 \end{quote}
 %
-Care is needed in specifying the contents of the intentions concerning our J-ing in these clauses. 
-As mentioned above, an appeal to shared intention is supposed to  characterise systematically a difference between two agents who intentionally J together (e.g.\ walk  together) and two agents who also  J together but do not do so intentionally (e.g.\ they happen to be walking side by side). 
-So we must avoid tacitly appealing to this distinction by  restricting possible values of J to those which involve our intentionally doing something together. 
+How could we show that our meeting these conditions is not in fact sufficient for us to have a shared intention? 
+We seek a case where the conditions are met but we lack a shared intention.
+But, in advance of deciding whether Bratman's account is right, how could we determine whether we have a shared intention?
+As already mentioned, an appeal to shared intention is supposed to  characterise systematically a difference between two agents who intentionally J together (e.g.\ walk  together) and two agents who also  J together but do not do so intentionally (e.g.\ they happen to be walking side by side). 
+Let's stipulate that two cases \emph{differ with respect to shared agency} when they differ in the way exemplified by the contrast between our intentionally walking together and our merely walking in parallel.
+Suppose, then, that we construct three cases, A, B and C.
+The three cases are as similar as possible, except that the above conditions are met in cases B and C but not in case A.
+Now if Bratman's conditions are sufficient for shared intention, A should differ from B with respect to shared agency, and B should not differ from C with respect to shared agency.
+But suppose that in fact A does not differ from B with respect to shared agency, but B does so differ from C.%
+\footnote{
+Strictly speaking only A and B are needed for the counterexample, of course.
+But including C makes it clearer that A and B do not differ with respect to shared agency.
+}
+Then we can conclude that Bratman's conditions are not sufficient for shared intention.
+This is how our counterexample will work.
+
+Care is needed in specifying the contents of the intentions concerning our J-ing in the above clauses, (1)--(3). 
+As we have stressed, 
+an appeal to shared intention is supposed to characterise systematically differences with respect to shared agency---to characterise, that is, a difference between two agents who intentionally J together and two agents who also  J together but do not do so intentionally.
+We must therefore avoid tacitly appealing to this distinction by  restricting possible values of J to those which involve our intentionally doing something together. 
 Rather the above  conditions, (1)--(3), must be sufficient for shared intention even for some values of J which are `neutral with respect to shared intentionality'.%
 \footnote{
  \citet[p.\ 147]{Bratman:1999fr}.
@@ -101,7 +118,7 @@ Then you can rationally intend that we go to Chicago together,
 What follows depends on the premise that this is indeed possible.%
 \footnote{ 
 \citet{Bratman:1999fr}  defends this claim at length. 
-Note also that this claim must be true if Bratman's account of shared intention is to provide an informative way of distinguishing between the contrast cases mentioned at the start.
+Note also that this claim must be true if Bratman's account of shared intention is to provide an informative and systematic distinction between the contrast cases mentioned at the start.
 }
 
 
@@ -113,14 +130,15 @@ this will also bear on the kinds of planning that are involved in acting togethe
 Before going further we must distinguish two versions of the claim that (1)--(3) are collectively sufficient for shared intention.
 The \emph{weak claim} is that there is some J such that these conditions are sufficient for you and I to intend that we J.
 The \emph{strong claim} is that for any J, these conditions are sufficient for you and I to intend that we J.
-One of Bratman's aims is to show that it is possible to give an account of shared intention using concepts that `are available within the theory of individual planning agency' \citep[p.\ 163]{Bratman:2009lv}.  
+One of Bratman's aims is to show that an account of shared intention can be \emph{conceptually conservative}:
+he aims, that is, to show that it is possible to give an account of shared intention using concepts that `are available within the theory of individual planning agency' \citep[p.\ 163]{Bratman:2009lv}.  
 Achieving this aim would require the strong claim, and it is to the strong claim that our counterexample is directed. 
 
 
 
 
 \section{Unshared Intentions}
-Before we can introduce the counterexample we need to introduce what we shall call `unshared intentions'.
+Before we can introduce the counterexample we need to define what we shall call `unshared intentions'.
 We have an \emph{unshared intention} that we <J$_1$, J$_2$> where J$_1$$\neq$J$_2$ just if:
 %
 \begin{quote}
@@ -186,7 +204,7 @@ To make sense of this requirement we need to generalise Bratman's definition of 
 \end{quote}
 A natural generalisation is this:
 \begin{quote}
-our individual subplans concerning our <J$_1$, J$_2$>-ing \emph{mesh} just in case there is some way we could <J$_1$, J$_2$> that would not violate either of our subplans but would, rather, involve the successful execution of those subplans. 
+our individual subplans concerning our <J$_1$, J$_2$>-ing \emph{mesh} just in case there is some way I could J$_1$ and you could J$_2$ that would not violate either of our subplans but would, rather, involve the successful execution of those subplans. 
 \end{quote}
 %
 To illustrate, 
