--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -40,7 +40,7 @@
 
 
 
-
+% --- paste from google docs after here ---
 
 
 \begin{abstract}
@@ -70,6 +70,7 @@ Word count: ***
 
 
 \section{Introduction}
+
 
 Motor processes sometimes occur in action observation and facilitate judgements about the goals to which actions are directed (see section \vref{sec:evidence} and \citealp{rizzolatti_functional_2010} for a review). 
 Suppose you observe someone's hand moving towards a pair of scissors. 
@@ -199,6 +200,7 @@ At this point it may be tempting to make a radical move by supposing that there 
  Note also that someone who made this radical move would have to explain why motor representation and judgement appear to be inferentially isolated in many other cases.}
 
 
+\section{***Notes for Action Experience section}
 
 
 DUSSELDORF ARGUMENT (rough, from Friday skype):
@@ -211,11 +213,15 @@ Therefore
 
 
 
-\section{Experience of Action}
-\label{sec:processes}
-Our aim in this section is to explain how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions.  Broadly, our proposal will be that the influence of motor representations on judgement is like that of visual representations.  Some some visual representations have content-respecting influences on judgement because they give rise to visual experiences of the objects and features represented. Similarly, some motor representations have content-respecting influences on judgement because they give rise to motor experiences of actions.  Or so we shall argue.
+------- there is evidence that motor representation might have content-respecting influences on judgment
+
+MR ----?----- JUD
+  experience: how to argue 
+….............how is possibile? experience revelatory of action
+------------------- parallel between colour and action experience
 
 TBE: content-respecting influences of (MR of G$_1$) onto (Jud about G$_2$) where G$_1$ matches G$_2$
+
 
 Explanation-1: MR of G captures directedness of action a -> experiences of action a as directed to G -> judgement that action is directed to goal G
 	Key component: Dusseldorf argument, imagination
@@ -229,18 +235,30 @@ E.g. clapping:
 	Thanks to the association, experience of the sounds can result in a representation of the action
 
 
-Broadly, our will be proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about these actions.  However this is consistent with two quite different hypotheses concerning the experiences associated with observing action.
-
-One hypothesis is that in observing action we experience not only movements and sounds but also goal-directed actions as such: it is this experience which enables judgements of action, and motor impairments affect judgements of action by preventing one from experiencing actions as such. On the other hypothesis, in observing actions presented as point-light stimuli or acoustically we experience movements and sounds only. Motor representations somehow make these particular experiences of movements and sounds possible, and these experiences in turn ground judgements about actions.  On both hypotheses motor representations enable experiences which are revelatory of action in the sense that they can provide reasons for correct judgements about which action someone is performing.  The difference concerns what these revelatory experiences are experiences of: whether some are experiences of goal-directed actions as such (the first hypothesis) or whether all are experiences of movements and sounds only (the second hypothesis).  
 
 
-In what follows we first consider evidence that the second hypothesis is plausible and then, in a further section, we consider arguments for the first hypothesis.  Although we shall conclude that the first hypothesis is correct---there are experience of action as such---it is helpful to approach this by way of evidence relevant to the second hypothesis.
+
+\section{Experience of Action}
+\label{sec:processes}
+Our aim in this section is to explain how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions. Broadly, our will be proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about the actions. However this is consistent with two quite different hypotheses concerning the experiences associated with motor representation in action observation. 
+
+One hypothesis, call it the Indirect Hypothesis, is based on evidence that, in observing action, motor representation can influence visual and acoustic experience.  (Perhaps this holds for other modalities too).  On this hypothesis, these influences enable an observer to identify goals to which the observed action is directed because the observer is additionally able to recognise actions from their associated sensory effects. To illustrate, suppose that an observer can associate the characteristic sound of a newspaper being snapped open with the action of snapping open a newspaper. Suppose also that, when observing an action, motor representations can influence whether, when or how she experiences this characteristic sound.  Then motor processes can indirectly influence the speed and accuracy of the observer's judgements about which actions are directed to this goal, the snapping open of a newspaper, by influencing whether, when or how she experiences the characteristic sound of this action.%
+\footnote{
+The Indirect Hypothesis is inspired by and consistent with views defended in \citet{Csibra:2007fy} and *Knoblich.  However, to our knowledge these authors have not considered exactly our question about content-respecting influences of motor representation on judgement, and we are not suggesting that the would endorse the Indirect Hypothesis in its entirety.  
+}
+
+The other hypothesis is in some ways more radical.  This hypothesis, call it the Direct Hypothesis, is that in observing action we experience not only movements and sounds but also goal-directed actions as such. Such experiences---call the motor experiences---stand to motor representations roughly as visual experiences stand to visual representations.  The motor experience of an action as directed to a particular outcome is made possible by a motor representation of that outcome.  So motor representations can have a content-respecting influence on judgements because motor representations enable motor experiences on which judgements are based.%
+\footnote{
+In formulating the Direct Hypothesis we draw on ideas from \citet{rizzolatti_mirrors_2008} and \citet{Jeannerod:1999kj}.
+}
+
+Let us say that an experience, motor or not, is revelatory of action just if it  can provide the subject of experience with reasons for correct judgements about which action someone is performing. On both hypotheses motor representations enable experiences which are revelatory of action. And both hypotheses use this broad idea to explain how motor representations could have content-respecting influences on judgements. The primary difference between the hypotheses concerns what these revelatory experiences are experiences of: whether all such are experiences of movements, sounds and the like only (the Indirect Hypothesis), or whether some are experiences of goal-directed actions as such (the Direct Hypothesis).  
+
+In the next section we expand on and consider evidence for the first hypothesis before turning to the second hypothesis in the following section.
 
 
-\subsection{Motor representation can enable visual and acoustic experiences}
-For convenience, in what follows we shall use the term `perceptual experiences' to mean experiences of the visual, acoustic, tactile and other things commonly associated with perception.  As a terminological stipulation (for which there are reasons, but they come later), no experiences of action as such are perceptual experiences.  Later, when we have considered arguments that some experiences are experiences of actions as such, we shall contrast `perceptual experience' with `motor experience'.
-
-The possibility that some motor representations enable visual experiences is suggested by research showing that motor plans, such as might be involved in producing a gesture with the hand, can influence visual processes \citep{bortoletto:2011_action}. The influence of motor representations on visual processes varies depending on both the gesture to be performed and the visual stimulus presented. Importantly, these influences can be detected before any action occurs, showing that it is the motor representations rather than any consequent movements which are influencing visual processes. [*Some other evidence; stress that the effect can be found using different measures.]  As it may be possible to influence visual processes in ways that make no difference to experience, we do not take these findings alone to establish the claim that motor representations could enable visual experiences.  But these findings do at least show that the claim is consistent with the neuropsychological facts.% 
+\section{The Indirect Hypothesis}
+The Indirect Hypothesis is depends on the claim that motor representations can influence sensory experiences.  This claim is supported by a variety of evidence.  \citet{bortoletto:2011_action} show that motor plans, such as might be involved in producing a gesture with the hand, can influence visual processes \citep{bortoletto:2011_action}. The influence of motor representations on visual processes varies depending on both the gesture to be performed and the visual stimulus presented. Importantly, these influences can be detected before any action occurs, showing that it is the motor representations rather than any consequent movements which are influencing visual processes. [*Some other evidence; stress that the effect can be found using different measures.]  As it may be possible to influence visual processes in ways that make no difference to experience, we do not take these findings alone to establish the claim that motor representations could enable visual experiences.  But these findings do at least show that the claim is consistent with the neuropsychological facts.% 
 \footnote{
 For a recent review of some of the evidence concerning motor influences on perceptual processing, see \citet{halasz:2012_unconscious}. (*refs)
 }  
